--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@grpc/grpc-js": "^1.9.12",
     "@protobuf-ts/grpc-transport": "^2.9.2",
     "@protobuf-ts/runtime-rpc": "^2.9.2",
+    "@types/k6": "^0.48.0",
     "google-protobuf": "^3.21.2",
     "prettier": "^3.1.0"
   },
