--- a/perf-tr.yaml
+++ b/perf-tr.yaml
@@ -9,6 +9,4 @@ spec:
   runner:
     image: { RUNNER_IMAGE }
   script:
-    configMap:
-      name: my-test
-      file: test-s.js
+    localFile: /test/test.js
